fix spacing of user items

--- a/src/components/Users/User.css
+++ b/src/components/Users/User.css
@@ -2,8 +2,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.5rem;
-  margin: 1rem 0;
 }
 
 .user__description {
